# product-management

./: .gitignore  INTERVIEW_LOG.md  dev  pyproject.toml
docs/: OPEN_QUESTIONS.md  PLANNER_IMPLEMENTATION_PLAN.md  PRD.md  TASK_FORMAT_SPEC.md  TECHNICAL_SPEC.md
src/pm/: __init__.py  __main__.py
src/pm/cli/: __init__.py  main.py  plan_commands.py  repl.py
src/pm/core/: __init__.py  artifact.py  conversation.py  persona.py  project.py
src/pm/core/planner/: __init__.py  checkpoints.py  codebase_analyzer.py  context.py  docs_fetcher.py  orchestrator.py  phases.py
src/pm/models/: __init__.py  artifact.py  persona.py  planner.py  project.py
src/pm/storage/: __init__.py  files.py
tooling/agents/: code-reviewer.yaml  devils-advocate.yaml  product-strategist.yaml  qa-analyst.yaml  technical-architect.yaml  ux-designer.yaml
tooling/persona/: advocate.yaml  analytical.yaml  pragmatist.yaml  skeptic.yaml  visionary.yaml
tooling/prompts/planner/: architect-phase.md  group-planner.md  layer-planner.md
tooling/specialization/: product-management.yaml  quality-assurance.yaml  software-architecture.yaml  software-engineering.yaml  ui-ux-design.yaml
